# Laplace

./: README.md  pyproject.toml
scripts/: generic.sh  sublayer_laplace.py  sublayer_laplace_half_half_val.py  sublayer_laplace_val.py  sublayer_laplace_val_server.py  subnetwork_laplace_server.py  subnetwork_laplace_val_server.py
scripts/job_lists/: full_laplace_sweep.txt  more_laplace_sweep.txt  subset_laplace.txt  subset_laplace_tuned.txt
